app/assets/stylesheets/home.css.scss
// Place all the styles related to the home controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

#content {
  margin-top: 50px;
}

#footer {
  background-image: url(classy_fabric.png);

  background-color: #1B1F23;
  color: #fb0;
  height: 50px;
}

blockquote {
  background: #f9f9f9;
  //border-left: 6px solid #ccc;
  // border-left: 6px solid #ff0800;
  border-left: 6px solid #b94a48;
  margin: 1.5em 10px;
  padding: 0.5em 10px;
  quotes: "\201C""\201D""\2018""\2019";
}

blockquote:before {
  content:"\201C";
  //content: open-quote;
  font-size: 4em;
  line-height: 0.1em;
  margin-right: 0.25em;
  vertical-align: -0.4em;
}

blockquote.pull-right {
  float: right;
  padding-right: 15px;
  padding-left: 0;
  border-right: 6px solid #b94a48;
  border-left: 0;
  margin-left: 20px;

}

blockquote p {
  display: inline;
}

body {
  // background-image: url(dust.jpg);
  color: #34495e;
}

ul {
  li {

    a:hover {
      border-top: 0.5px solid #fb0;
      background-color: #ffcc40 !important;
      color: #fff !important;

      -webkit-transition: 0.25s linear;
      -moz-transition: 0.25s linear;
      -o-transition: 0.25s linear;
      transition: 0.25s linear;
    }
  }
}

.pagination ul > .active > a, .pagination ul > .active > span {color: red;}

.video-container {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 30px; height: 0; overflow: hidden;
}
 
.video-container iframe,
.video-container object,
.video-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.navbar-inner {
  background: #b94a48;
  -webkit-box-shadow: 0 0 0;
  -moz-box-shadow: 0 0 0;
  box-shadow: 0 0 0;
  border-width: 0;
}

.navbar-search {
  input {
    background-color: #972826;
    border-color: transparent;
    color: white;
  }
}

.navbar {
  .brand {
    color: white;
    text-shadow: none;
  }
}

.navbar {
  .nav {
    li {
      a {
        color: white;
        text-shadow: none;
      }
    }
  }
}


hr {
  border-top: 2px solid #eeeeee;
  border-bottom: 2px solid white;
}

p::selection {
  background-color: #af1b5a;
  color: white;
}

p::-moz-selection {
  background-color: #af1b5a;
  color: white;
}

